Created login forms and product grid at homepage

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,8 @@
     --brown: #b77344;
     --firefly: #0A232F;
     --gunmetal: #172E39;
+    --green: #83b735;
+    --gray: #a5a5a5;
 
     --primary-font: 'Lato', sans-serif;
     --secondary-font: 'Nunito Sans', sans-serif;
