Login adjustments and feedbacks

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@
     --gunmetal: #172E39;
     --green: #83b735;
     --gray: #a5a5a5;
+    --red: #e63946;
 
     --primary-font: 'Lato', sans-serif;
     --secondary-font: 'Nunito Sans', sans-serif;
