--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@
     --firefly: #0A232F;
     --gunmetal: #172E39;
     --green: #83b735;
-    --gray: #a5a5a5;
+    --gray: #8f8f8f;
     --red: #e63946;
 
     --primary-font: 'Lato', sans-serif;
