--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@
     --green: #83b735;
     --gray: #8f8f8f;
     --red: #e63946;
+    --dark: #333333;
 
     --primary-font: 'Lato', sans-serif;
     --secondary-font: 'Nunito Sans', sans-serif;
