Created favorites page

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,7 @@
     --gray: #8f8f8f;
     --red: #e63946;
     --dark: #333333;
+    --greenHover: #6b9e2f;
 
     --primary-font: 'Lato', sans-serif;
     --secondary-font: 'Nunito Sans', sans-serif;
