--- a/src/styles.css
+++ b/src/styles.css
@@ -116,6 +116,15 @@ video {
     font-family: var(--primary-font);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: bold;
+}
+
 article,
 aside,
 details,
